# python-project-lvl2

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: hexlet-check.yml  pyci.yml
gendiff/: cli.py  diff_generator.py  file_parcer.py  formatter.py  gendiff.py  parsing.py
gendiff/format/: plain.py
gendiff/formats/: json.py  plain.py  stylish.py
gendiff/scripts/: gendiff.py
tests/: __init__.py  test_diff.py  test_flat_format.py  test_json_format.py  test_plain_format.py
tests/fixtures/: expected_file.json  expected_nested.txt  first_file.yaml
