[tool.poetry]
name = "vsviridov_gendiff"
version = "0.1.2"
description = ""
authors = ["Vladislav Sviridov <v.sviridov.dev@gmail.com>"]
packages =[
   {include = "gendiff"}
]

[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"

[tool.poetry.dependencies]
python = "^3.8"
argparse = "^1.4.0"
pytest = "^6.1.2"
coverage = "^5.3"
pytest-cov = "^2.10.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
