[tool.poetry]
name = "hexlet-code"
version = "0.5.1"
description = ""
authors = ["Vladislav Sviridov <v.sviridov.dev@gmail.com>"]
packages =[
   {include = "gendiff"}
]

[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"

[tool.poetry.dependencies]
python = "^3.8"
PyYAML = "^5.3.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"
argparse = "^1.4.0"
pytest = "^6.2.1"
coverage = "^5.3.1"
pytest-cov = "^2.10.1"
icecream = "^2.0.0"

[[tool.poetry.source]]
name = "test_pypi"
url = "https://test.pypi.org/legacy/"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
